update swagger.json and xml comments
